# Interactive-MEN-RT

./: LICENSE.txt  README.md  requirements.txt
demo/: demo.py
inference/: Interactive_MEN_RT_predictor.py  test_Interactive_MEN_RT.py  test_utils.py
nnInteractive/: train.py
nnInteractive/inference/: inference_session.py
nnInteractive/inference/cvpr2025_challenge_baseline/: Dockerfile  predict.py  predict.sh
nnInteractive/interaction/: point.py
nnInteractive/run/: run_inference.py  run_training.py
nnInteractive/supervoxel/: README.md  pyproject.toml
nnInteractive/supervoxel/configs/: config.yaml  nnUNet_preprocessed.yaml  test.yaml
nnInteractive/supervoxel/src/: metadata.py  reader.py  run.py  supervoxel.py
nnInteractive/supervoxel/src/sam2/sam2/: build_sam.py  sam2_video_predictor.py
nnInteractive/supervoxel/src/sam2/sam2/utils/: misc.py
nnInteractive/trainer/: nnInteractiveTrainer.py
nnInteractive/utils/: bboxes.py  checkpoint_cleansing.py  crop.py  erosion_dilation.py  rounding.py
